--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -17,6 +17,8 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 6.0.100-preview.2.21155.3
+    - name: Clean
+      run: dotnet clean && dotnet nuget locals all --clear
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
