--- a/.gitignore
+++ b/.gitignore
@@ -362,4 +362,8 @@ MigrationBackup/
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
 
-# Note that I ran `git update-index --skip-worktree "Tests/.Program.cs"`
+# Note that I ran 
+```
+git update-index --skip-worktree "Tests/.Program.cs"
+git update-index --skip-worktree "CLI - fsmirror/Properties/launchSettings.json"
+```
